# GamedataAutoFlux

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  scratch_test.py
config/: logging.yaml  settings.yaml
data/: autoflux.db  reports.db  scheduler.db  vector_store.db
scripts/: fetch_steam_app_list.py  migrate_pipelines_to_dag.py  official_site_recipe_smoke.py  official_site_single_smoke.py  qimai_login.py  qimai_smoke.py  run_full_game_reports.py  steamdb_login.py  steamdb_smoke.py  worker_agent.py
src/: __init__.py
src/core/: dag.py  (+32 more)
tests/: conftest.py  test_agent_checkpointer.py  test_agent_data_tools.py  test_agent_history_state.py  test_agent_initialization.py  test_agent_invoke_lifecycle.py  test_agent_invoke_orchestration.py  test_agent_invoke_stream.py  test_agent_report_selection.py  test_agent_report_tools.py  test_agent_runtime_config.py  test_agent_runtime_facade.py  test_agent_service_concurrency.py  test_agent_session_service.py  test_agent_status.py  test_agent_status_summary.py  test_agent_stream_events.py  test_agent_task_tools.py  test_agent_thread_store.py  test_agent_tool_utils.py  test_agent_utils.py  test_agent_workflow_bridge_events.py  test_agent_workflow_cron.py  test_agent_workflow_events.py  test_agent_workflow_matchers.py  test_agent_workflow_multisource.py  test_agent_workflow_readiness.py  test_agent_workflow_result_cards.py  test_agent_workflow_routing.py  test_agent_workflow_runtime_nodes.py  test_agent_workflows.py  test_api_safety.py  test_app_lifespan_migration.py  (+74 more)
(+236 files in other folders)
