[project]
name = "gamedata-autoflux"
version = "0.1.0"
description = "可复用、可扩展的游戏行业数据监控与分析工作流框架"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.32.0",
    # Data validation
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    # Configuration
    "pyyaml>=6.0.0",
    # Logging
    "loguru>=0.7.0",
    # Database
    "aiosqlite>=0.20.0",
    # Scheduling
    "apscheduler>=3.10.0",
    # Templating
    "jinja2>=3.1.0",
    # HTTP client (for collectors)
    "httpx>=0.27.0",
    # browser automation (SteamDB scraping)
    "playwright>=1.40.0",
    # AI-driven web scraping (fallback)
    "firecrawl-py>=1.0.0",
    # Utilities
    "python-multipart>=0.0.9",
    # Google Trends
    "pytrends>=4.9.2",
    # Excel report generation
    "openpyxl>=3.1.0",
    # WebSocket support
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
]
vector = [
    "chromadb>=0.5.0",
]
embedding = [
    "openai>=1.40.0",
]

[project.scripts]
autoflux = "src.web.app:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests that access real external services",
]

[tool.ruff]
line-length = 100
target-version = "py312"
